// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BalanceUpdate renders without error after fetching data 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-end",
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#0E1524",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 17,
          "lineHeight": 24,
        },
      ]
    }
  >
    +ETH
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 0,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#5D6785",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 20,
        },
      ]
    }
  >
    &lt;$0.00000001
  </Text>
</View>
`;

exports[`BalanceUpdate skips fetching data when passing in the USD value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-end",
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#0E1524",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 17,
          "lineHeight": 24,
        },
      ]
    }
  >
    +ETH
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 0,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#5D6785",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 20,
        },
      ]
    }
  >
    $100.00
  </Text>
</View>
`;
